src/pages/objkt-display/styles.module.scss
@import '../../styles/layout.scss';
@import '../../styles/variables.scss';
.objktview {
  position: relative;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
  @include respond-to('tablet') {
    width: 60vh;
    height: 60vh;
    margin: 0 auto;
  }
}

.info_ipfs {
  white-space: pre-wrap;
  margin: 0 1em;
  padding-top: 12px;
  width: fit-content;
  a {
    color: var(--gray-70);
  }
  border-top: 1px solid var(--border-color);
}

.info_attributes,
.info_ipfs {
  font-size: 0.75em;
  display: flex;
  flex-direction: row;
  white-space: pre-wrap;
  color: var(--gray-70);
  margin: 0.5em 0em;
  p {
    margin: 0 0.5em;
  }
}

.info_attributes {
  color: var(--gray-70);
  p {
    color: var(--gray-70);
  }
}

.infos_attributes_container,
.infos_container {
  margin: 0 1.5em;
}
.infos_container > {
  div {
    margin: 2em 0em;
  }
}

.infos_attributes_flex {
  display: flex;
  flex-direction: column;
  margin-bottom: 1em;
}

.container {
  display: flex;
  flex-direction: column;
  margin: 0 1em;
}

.history__container {
  margin: 0 1em;
}

.history {
  // margin: 0 20px;
  height: 95px;
  font-size: $font-small-mobile;
  display: flex;
  flex-direction: column;
  align-content: space-between;
  flex-wrap: wrap;
  margin-top: 18px;
  margin-bottom: 15px;
  border-bottom: 1px solid var(--border-color);
  a,
  .history__mint__op {
    min-width: 0px;
    font-size: $font-small-mobile;
    @include respond-to('desktop') {
      font-size: $font-small;
      height: auto;
      width: 7%;
      min-width: 50px;
      flex-direction: row;
    }
  }
  svg {
    margin: auto 0;
    margin-right: 5px;
    fill: var(--text-color);
    line,
    path {
      stroke: var(--text-color);
    }
  }
  span {
    height: 20px;
  }
  @include respond-to('desktop') {
    margin: 0;
    margin-bottom: 10px;
    font-size: $font-small;
    height: 20px;
    border-bottom: none;
  }
}

.history__labels {
  display: none;
  justify-content: space-between;
  font-size: $font-small-mobile;
  margin-bottom: 8px;
  color: var(--gray-60);
  @include respond-to('desktop') {
    display: flex;
    font-size: $font-small;
  }
}

.history__event__container {
  margin-bottom: 7px;
  display: flex;
  height: 20px;
  width: fit-content;
  @include respond-to('desktop') {
    margin-bottom: 0;
    width: calc(7% + 35px);
  }
}

.history__event,
.history__from,
.history__to,
.history__ed,
.history__price,
.history__date {
  margin-bottom: 7px;
  height: 20px;
  white-space: nowrap;
  @include respond-to('desktop') {
    margin-bottom: 0;
    overflow: hidden;
    text-overflow: clip;
  }
}

.history__date {
  overflow: visible;
}

.history__event {
  @include respond-to('desktop') {
    width: calc(9.166666666%);
  }
}

.history__from,
.history__to {
  @include respond-to('desktop') {
    text-overflow: ellipsis;
    width: calc(20.833333333%);
  }
}

.history__ed {
  @include respond-to('desktop') {
    text-align: center;
    width: calc(6.944444444%);
  }
}

.history__price,
.history__date {
  @include respond-to('desktop') {
    text-align: right;
    width: calc(13.888888888%);
  }
}

.history__royalties {
  font-size: $font-small-mobile;
  @include respond-to('desktop') {
    font-size: $font-small;
    margin-top: 20px;
    padding-top: 10px;
    width: 33.333333333%;
    border-top: 1px solid var(--border-color);
  }
}

.history__secondary {
  color: var(--secondary-color);
  margin-right: 1em;
}

.history__mobile {
  display: block;
  @include respond-to('desktop') {
    display: none;
  }
}

.history__from,
.history__to {
  display: flex;
}

.history__ed,
.history__price,
.history__date {
  display: none;
  @include respond-to('desktop') {
    display: block;
  }
}

.history__inner__mobile {
  display: flex;
  flex-direction: column;
  text-align: right;
  .history__ed,
  .history__price,
  .history__date {
    display: block;
  }
  @include respond-to('desktop') {
    display: none;
  }
}

.history__desktop {
  display: none;
  @include respond-to('desktop') {
    display: block;
  }
}

.objkt__title {
  padding-top: 10px;
  font-weight: bold;
  font-size: $font-large-mobile;
  @include respond-to('desktop') {
    font-size: $font-large;
  }
}

.restricted,
.restricted > * {
  color: var(--background-color);
  text-align: center;
  font-size: 1em;
  padding: 0.75em;
  cursor: default;
}

.restricted {
  background: var(--text-color);
}

.restricted a {
  padding: 0em;
  cursor: pointer;
}

